...
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="50dp"
                    android:gravity="center_horizontal"
                    android:text="@string/vaccine_order_fragment_title_text"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

...
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

                <LinearLayout
                    android:id="@+id/addItemLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/spinner_border"
...
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/selectVaccineTypeRelativeLayout"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="5dp"
                                android:background="@drawable/spinner_border"
                                android:orientation="horizontal">

                                <Spinner
                                    android:id="@+id/selectVaccineSpinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="5dp"
                                    android:background="@android:color/transparent"
...
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

                            </RelativeLayout>

                            <LinearLayout
                                android:id="@+id/addItemButtonsLinearLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_toEndOf="@+id/available_passenger_number_container">

...
                                    android:onClick="@{viewmodel::onItemsNumberIncClick}"
                                    android:src="@drawable/ic_baseline_add"
                                    android:text="@string/vaccine_order_fragment_text_plus"
                                    android:textSize="16dp" />

                                <ImageButton
                                    android:id="@+id/addItemImageButton"
                                    android:layout_width="40sp"
                                    android:layout_height="40sp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginStart="10dp"
                                    android:onClick="@{viewmodel::addToOrder}"
                                    android:src="@drawable/ic_baseline_playlist_add" />
...

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/orderListLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/spinner_border"
...

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/additionalDataLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/spinner_border"
...

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/makeOrderBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{viewmodel::makeOrder}"
                    android:text="@string/vaccine_order_fragment_order_text"
                    android:textSize="16dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/additionalDataLinearLayout" />
...
